--- a/public/scss/_home.scss
+++ b/public/scss/_home.scss
@@ -63,6 +63,7 @@
 	position: absolute;
 	top:286px;
 	z-index: 99;
+	overflow: scroll;
 
 	.searchresult{
 		display: inline-block;
